0027477: Visualization - Select3D_SensitiveCircle always return infinite depth value in boundary mode

- unnecessary re-initialization of pick result was removed from Select3D_SensitiveCircle;
- test case for issue #27477